created todo section including routes

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,22 +1,10 @@
 .example-card {
-  max-width: 400px;
+  max-width: 70%;
 }
 
-.center {
+.main-div{
+  height: 100vh;
   display: flex;
-  height: 300px;
-  background-color: #ffffff;
   justify-content: center;
-}
-
-.center mat-card {
-  align-self: center;
-}
-
-.container{
-  padding-left:100px;
-}
-
-.login-align{
-  margin-top:10%;
+  align-items: center;
 }
