--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -7,10 +7,22 @@
       <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
     </ng-container>
 
+    <!-- date column-->
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Creation Date </th>
+      <td mat-cell *matCellDef="let todo"> {{todo.date | date}} </td>
+    </ng-container>
+
     <!-- description Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let todo"> {{todo.description}} </td>
+    </ng-container>
+
+    <!-- isCompleted Column -->
+    <ng-container matColumnDef="isCompleted">
+      <th mat-header-cell *matHeaderCellDef> isCompleted </th>
+      <td mat-cell *matCellDef="let todo"> {{todo.isCompleted}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
