--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -7,12 +7,6 @@
       <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
     </ng-container>
 
-    <!-- date column-->
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Creation Date </th>
-      <td mat-cell *matCellDef="let todo"> {{todo.date | date}} </td>
-    </ng-container>
-
     <!-- description Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -22,7 +16,13 @@
     <!-- isCompleted Column -->
     <ng-container matColumnDef="isCompleted">
       <th mat-header-cell *matHeaderCellDef> isCompleted </th>
-      <td mat-cell *matCellDef="let todo"> {{todo.isCompleted}} </td>
+      <td mat-cell *matCellDef="let todo"> {{todo.completed}} </td>
+    </ng-container>
+
+    <!-- date column-->
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Creation Date </th>
+      <td mat-cell *matCellDef="let todo"> {{todo.createdDate | date}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
