--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,10 +5,19 @@
     </div>
 
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li>
+      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
+        <a href="/login" class="nav-link"> Home</a>
+      </li>
+      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
+        <a href="/todos" class="nav-link"> ToDos</a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav navbar-collapse justify-content-end">
+      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn() === false">
         <a href="/login" class="nav-link"> Login</a>
       </li>
-      <li>
+      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
         <a href="/logout" class="nav-link"> Logout</a>
       </li>
     </ul>
