--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,19 +6,19 @@
 
     <ul class="navbar-nav navbar-collapse justify-content-end">
       <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
-        <a href="/login" class="nav-link"> Home</a>
+        <a routerLink="/login" class="nav-link"> Home</a>
       </li>
       <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
-        <a href="/todos" class="nav-link"> ToDos</a>
+        <a routerLink="/todos" class="nav-link"> ToDos</a>
       </li>
     </ul>
 
     <ul class="navbar-nav navbar-collapse justify-content-end">
       <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn() === false">
-        <a href="/login" class="nav-link"> Login</a>
+        <a routerLink="/login" class="nav-link"> Login</a>
       </li>
       <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
-        <a href="/logout" class="nav-link"> Logout</a>
+        <a routerLink="/logout" class="nav-link"> Logout</a>
       </li>
     </ul>
   </nav>
