1.bootstrap fix 2. add todo

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="Body-content ">
 click here to get customized welcome message
   <button class="btn btn-success" (click) = "generateWelcomeMessage()">
     generate welcome message
@@ -6,8 +6,8 @@ click here to get customized welcome message
   <div *ngIf="message">
     {{message}}
   </div>
-</div>
 
 <div>
   Access your <a routerLink="/todos"> todos </a> here.
+</div>
 </div>
