--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -1,34 +1,41 @@
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
+<div class="container">
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
 
-    <!-- id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
-    </ng-container>
+      <!-- id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let todo"> {{todo.id}} </td>
+      </ng-container>
 
-    <!-- description Column -->
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let todo"> {{todo.description}} </td>
-    </ng-container>
+      <!-- description Column -->
+      <ng-container matColumnDef="Description">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let todo"> {{todo.description}} </td>
+      </ng-container>
 
-    <!-- isCompleted Column -->
-    <ng-container matColumnDef="isCompleted">
-      <th mat-header-cell *matHeaderCellDef> isCompleted </th>
-      <td mat-cell *matCellDef="let todo"> {{todo.completed}} </td>
-    </ng-container>
+      <!-- isCompleted Column -->
+      <ng-container matColumnDef="Completed">
+        <th mat-header-cell *matHeaderCellDef> isCompleted </th>
+        <td mat-cell *matCellDef="let todo"> {{todo.completed}} </td>
+      </ng-container>
 
-    <!-- date column-->
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Creation Date </th>
-      <td mat-cell *matCellDef="let todo"> {{todo.createdDate | date}} </td>
-    </ng-container>
+      <!-- date column-->
+      <ng-container matColumnDef="Created Date">
+        <th mat-header-cell *matHeaderCellDef> Creation Date </th>
+        <td mat-cell *matCellDef="let todo"> {{todo.createdDate | date}} </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <!-- description Column -->
+      <ng-container matColumnDef="Username">
+        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <td mat-cell *matCellDef="let todo"> {{todo.username}} </td>
+      </ng-container>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </div>
 </div>
-
