--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,25 +1,39 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-bark">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="navbar-brand">
       ToDo Application
     </div>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" class="nav-item active">
+          <a class="nav-link" routerLink="/login">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <!--<li class="nav-item" *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">-->
+          <!--<a class="nav-link" routerLink="/todos">ToDos</a>-->
+        <!--</li>-->
+        <li class="nav-item dropdown"  *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+             role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            ToDos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink="/todos">View ToDos</a>
+            <a class="dropdown-item" routerLink="/add-todo">Add</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" routerLink="#">Delete</a>
+          </div>
+        </li>
+      </ul>
 
-    <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
-        <a routerLink="/login" class="nav-link"> Home</a>
-      </li>
-      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
-        <a routerLink="/todos" class="nav-link"> ToDos</a>
-      </li>
-    </ul>
+      <ul class="navbar-nav navbar-collapse justify-content-end">
+        <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn() === false">
+          <a routerLink="/login" class="nav-link"> Login</a>
+        </li>
+        <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
+          <a routerLink="/logout" class="nav-link"> Logout</a>
+        </li>
+      </ul>
+    </div>
 
-    <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn() === false">
-        <a routerLink="/login" class="nav-link"> Login</a>
-      </li>
-      <li *ngIf="hardcodedAuthenticationService.isUserLoggedIn()">
-        <a routerLink="/logout" class="nav-link"> Logout</a>
-      </li>
-    </ul>
   </nav>
 </header>
