--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -1,24 +1,45 @@
 <div class="container">
-  <form>
+  <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
     <div class="form-group">
       <label for="exampleInputId">id</label>
-      <input type="number" class="form-control" id="exampleInputId" aria-describedby="idHelp" placeholder="Enter Id">
+      <input type="number" class="form-control" id="exampleInputId"
+             aria-describedby="idHelp" placeholder="Enter Id"  formControlName="id">
+             <!--[(ngModel)]="id" name="id"-->
+
       <!--<small id="idHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
     </div>
     <div class="form-group">
       <label for="exampleFormControlInput1">Description</label>
-      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="description">
+      <input type="text" class="form-control" id="exampleFormControlInput1"
+             placeholder="description" formControlName="description">
     </div>
     <div class="form-group">
       <label for="exampleFormControlSelect1">Completed?</label>
-      <select class="form-control" id="exampleFormControlSelect1">
+      <select class="form-control" id="exampleFormControlSelect1" formControlName="completed">
+              <!--[(ngModel)]="completed" name="completed">-->
         <option>true</option>
         <option>false</option>
       </select>
     </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <mat-form-field class="example-full-width">
+      <input matInput [matDatepicker]="picker" placeholder="Choose a date"
+             (dateChange)="addEvent('change', $event)" formControlName="createdDate">
+      <mat-datepicker-toggle matSuffix [for]="picker">
+        <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+      </mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <br/><br/>
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <br/><br/>
+    <div class="row"  *ngIf="successMsg">
+      <div class="col-xs-12">
+        <p class="alert alert-success">
+          <strong>Added Successfully!</strong>
+        </p>
+      </div>
     </div>
   </form>
 </div>
