--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,1 +1,11 @@
-<p>an error occured!</p>
+<div class="page-wrap d-flex flex-row align-items-center">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-12 text-center">
+        <span class="display-1 d-block">Oops!</span>
+        <div class="mb-4 lead">An Error Occured.</div>
+        <a routerLink="/login" class="btn btn-link">Back to Home</a>
+      </div>
+    </div>
+  </div>
+</div>
