--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,8 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button (click)="login()" color="primary">Login</button>
+    <!--<button mat-raised-button (click)="login()" color="primary">Login</button>-->
+    <button mat-raised-button (click)="handleBasicAuthLogin()" color="primary">Login</button>
   </mat-card-actions>
   <div>
     <mat-error *ngIf="invalidCredentials">{{invalidCredentialMessage}}</mat-error>
