css changes , footer , edit button in table

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,11 @@
 <!-- Footer -->
-<footer class="footer">
-  <div class="container">
-    <div class="footer-text text-muted">Copyright &copy; 2019 - Footer</div>
+<footer class="page-footer font-small cyan darken-3">
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 Copyright: AnaswaraNV
   </div>
+  <!-- Copyright -->
+
 </footer>
+<!-- Footer -->
