--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="Body-content ">
+<div class="Body-content body-align ">
 click here to get customized welcome message
   <button class="btn btn-success" (click) = "generateWelcomeMessage()">
     generate welcome message
