--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,6 +5,11 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
+        <li>
+          <button class="btn btn-success" (click)="toggle()">
+            Toggle Menu
+          </button>
+        </li>
         <li *ngIf="basicAuthService.isUserLoggedIn()" class="nav-item active">
           <a class="nav-link" routerLink="/login">Home <span class="sr-only">(current)</span></a>
         </li>
